[package]
name = "backend"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.10.0", features = ["full"] }
warp = "0.3.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3.16", default-features = false }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
